# aicoding-dual-pipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: mcp.md  skill.md
dual_pipeline/: agents_sdk_cli.py  cli.py  mcp_server.py  run_worker.py
schemas/: iteration-budget.schema.json  plan.schema.json  result.schema.json  verdict.schema.json
skill/: SKILL.md
