[project]
name = "aicoding-dual-pipeline"
version = "0.1.0"
description = "Local reviewer/developer Codex pipeline orchestrator"
requires-python = ">=3.11"
dependencies = [
  "openai-agents",
]

[project.scripts]
aicoding-dual-pipeline = "dual_pipeline.cli:main"
aicoding-dual-pipeline-agents = "dual_pipeline.agents_sdk_cli:main"
aicoding-dual-pipeline-mcp = "dual_pipeline.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dual_pipeline"]
